<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="player_color_coral">Fox</string>
    <string name="player_color_gold">Owl</string>
    <string name="player_color_blue">Wolf</string>
    <string name="player_color_violet">Raven</string>
    <string name="player_color_teal">Moth</string>
    <string name="player_color_green">Cobra</string>
    <string name="player_color_bronze">Stag</string>
...
